5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4414/executions/1635_2443.log
== TEST (2019-04-14 17:27:35) 
-- CODE:
from math import pi
r = float(input())
x = float(input())
a = float(input())

ve = ((4*pi)*(r*r*r))/3
vc = ((pi*x*x)*(3*r-x))/3
if ((a==2),round(vc,4)):
	print(round(ve,4))
else: 
	print(round(vc,4))
-- OUTPUT:
179.5944
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 17:28:53) 
-- CODE:
from math import pi
r = float(input())
x = float(input())
a = float(input())

ve = (4*pi*r*r*r)/3
vc = ((pi*x*x)*(3*r-x))/3
if ((a==2),round(vc,4)):
	print(round(ve,4))
else: 
	print(round(vc,4))
-- OUTPUT:
179.5944
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 17:31:06) 
-- CODE:
from math import pi
r = float(input())
x = float(input())
a = float(input())

ve = (4*pi*r*r*r)/3
vc = ((pi*x*x)*(3*r-x))/3
if ((a==2),round(vc,4)):
	print(round(ve,4))
else: 
	print(round(vc,4))
-- OUTPUT:
179.5944
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 17:32:07) 
-- CODE:
from math import pi
r = float(input())
x = float(input())
a = float(input())

ve = (4*pi*r*r*r)/3
vc = ((pi*x*x)*(3*r-x))/3
if (a==2):
	print(round(ve,4))
else: 
	print(round(vc,4))
-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 12:25:44) 
-- CODE:
from math import pi
r = float(input())
x = float(input())
a = float(input())

ve = (4*pi*r**3)/3
vc = ((pi*x**2)*(3*r-x))/3
if (a==2):
	print(round(ve,4))
else: 
	print(round(vc,4))
-- EXECUTION TIME:
0.214325
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
310.3391
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:25:46) 
-- CODE:
from math import pi
r = float(input())
x = float(input())
a = float(input())

ve = (4*pi*r**3)/3
vc = ((pi*x**2)*(3*r-x))/3
if (a==2):
	print(round(ve,4))
else: 
	print(round(vc,4))
-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 12:28:14) 
-- CODE:
from math import pi
r = float(input())
x = float(input())
a = float(input())

1= (4*pi*r**3)/3
2 = ((pi*x**2)*(3*r-x))/3
if (a==2):
	print(round(1,4))
else: 
	print(round(2,4))
-- EXECUTION TIME:
0.124775
-- ERROR:
  File "/home/codebench/codes/1635/2443/main.py", line 6
    1= (4*pi*r**3)/3
    ^
SyntaxError: can't assign to literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:28:17) 
-- CODE:
from math import pi
r = float(input())
x = float(input())
a = float(input())

1= (4*pi*r**3)/3
2 = ((pi*x**2)*(3*r-x))/3
if (a==2):
	print(round(1,4))
else: 
	print(round(2,4))
-- ERROR:
File "XXXX", line 6
    1= (4*pi*r**3)/3
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 12:28:50) 
-- CODE:
from math import pi
r = float(input())
x = float(input())
a = float(input())

z= (4*pi*r**3)/3
y = ((pi*x**2)*(3*r-x))/3
if (a==2):
	print(round(z,4))
else: 
	print(round(y,4))
-- EXECUTION TIME:
0.173916
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
310.3391
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 12:29:33) 
-- CODE:
from math import pi
r = float(input())
x = float(input())
a = float(input())

z= (4*pi*r**3)/3
y = (pi*x**2)*(3*r-x)/3
if (a==2):
	print(round(z,4))
else: 
	print(round(y,4))
-- EXECUTION TIME:
0.170506
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
310.3391
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:30:53) 
-- CODE:
from math import pi
r = float(input())
x = float(input())
a = float(input())

z= (4*pi*r**3)/3
y = (pi*x**2)*(3*r-x)/3
if (a==2):
	print(round(z,4))
else: 
	print(round(y-Z,4))
-- EXECUTION TIME:
0.151369
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2443/main.py", line 11, in <module>
    print(round(y-Z,4))
NameError: name 'Z' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:31:35) 
-- CODE:
from math import pi
r = float(input("raio:"))
x = float(input("altura:"))
a = float(input("1 ou 2"))

z= (4*pi*r**3)/3
y = (pi*x**2)*(3*r-x)/3
if (a==2):
	print(round(z,4))
else: 
	print(round(y-Z,4))
-- EXECUTION TIME:
0.194414
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2443/main.py", line 11, in <module>
    print(round(y-Z,4))
NameError: name 'Z' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:31:38) 
-- CODE:
from math import pi
r = float(input("raio:"))
x = float(input("altura:"))
a = float(input("1 ou 2"))

z= (4*pi*r**3)/3
y = (pi*x**2)*(3*r-x)/3
if (a==2):
	print(round(z,4))
else: 
	print(round(y-Z,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(round(y-Z,4))
NameError: name 'Z' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:32:42) 
-- CODE:
from math import pi
r = float(input("raio:"))
x = float(input("altura:"))
a = float(input("1 ou 2"))

v1= (4*pi*r**3)/3
v2= (pi*x**2)*(3*r-x)/3
if (a==1):
	print(round(v2,4))
else: 
	print(round(v1-v2,4))
-- EXECUTION TIME:
0.178664
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
